<resources>
    <string name="app_name">Yes, Your Life Is Terrible</string>
    <string name="foodChoice">I\'m hungry...</string>
    <string name="technologyChoice">My phone/laptop/tablet won\'t work...</string>
    <string name="commuteChoice">This traffic is ridiculous...</string>
    <string name="waterChoice">I\'m thirsty...</string>
    <string name="parentsChoice">PARENTS</string>
    <string name="familyChoice">My family is a nightmare...</string>
    <string name="workChoice">Work is crushing my soul...</string>
    <string name="btnGeneratePic">Generate a Random Picture</string>
    <string name="browseForPic">Or just browse for a picture that captures your life\'s problems.</string>
    <string name="gallery">Save to Gallery</string>
    <string name="friends">Send to Friends</string>
    <string name="caption">Add a Caption</string>
    <string name="caption_added">Caption Added</string>



    <string-array name="names">
        <item>Save to gallery</item>
        <item>Send with friends</item>
        <item>Add a Caption</item>
    </string-array>"

    <string name="yylit">Why Is Your Life So Terrible?</string>
    <string name="sub_heading">Select the button that describes your struggles</string>
    <string name="enterCaption">Enter Caption Here ...</string>
    <string name="caption_Added">Caption Added</string>

</resources>
