<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/topBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPressedHighlight"
        android:fontFamily="monospace"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/yylit"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnRandomGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_dark"
        android:fontFamily="casual"
        android:text="@string/btnGeneratePic"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:fontFamily="serif-monospace"
        android:text="@string/browseForPic"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

            <GridView
                android:id="@+id/gridview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="2"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp">

            <!--<TableLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:baselineAligned="false"-->
                <!--android:textAlignment="center"-->
                <!--tools:layout_editor_absoluteX="26dp"-->
                <!--tools:layout_editor_absoluteY="156dp">-->

                <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_gravity="center_horizontal">-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@drawable/hunger2"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton2"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--android:layout_weight=".3"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton3"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->
                <!--</TableRow>-->

                <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_gravity="center_horizontal">-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton4"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton5"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton6"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->
                <!--</TableRow>-->

                <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_gravity="center_horizontal">-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton7"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton8"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton9"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->
                <!--</TableRow>-->

                <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_gravity="center_horizontal">-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton10"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton11"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton12"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->
                <!--</TableRow>-->

                <!--<TableRow-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_gravity="center_horizontal">-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton13"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton14"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->

                    <!--<ImageButton-->
                        <!--android:id="@+id/imageButton15"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--app:srcCompat="@android:drawable/sym_def_app_icon"-->
                        <!--tools:layout_editor_absoluteX="60dp"-->
                        <!--tools:layout_editor_absoluteY="195dp" />-->
                <!--</TableRow>-->

            <!--</TableLayout>-->
       </GridView>
    </LinearLayout>
